rust_ggml/ffi_ggml/src/ggml_bindings.rs

pub const ggml_type_GGML_TYPE_F32: ggml_type = 0;
pub const ggml_type_GGML_TYPE_F16: ggml_type = 1;
pub const ggml_type_GGML_TYPE_Q4_0: ggml_type = 2;
pub const ggml_type_GGML_TYPE_Q4_1: ggml_type = 3;
pub const ggml_type_GGML_TYPE_Q8_0: ggml_type = 4;
pub const ggml_type_GGML_TYPE_I8: ggml_type = 5;
pub const ggml_type_GGML_TYPE_I16: ggml_type = 6;
pub const ggml_type_GGML_TYPE_I32: ggml_type = 7;
pub const ggml_type_GGML_TYPE_COUNT: ggml_type = 8;
pub type ggml_type = u32;
pub const ggml_op_GGML_OP_NONE: ggml_op = 0;
pub const ggml_op_GGML_OP_DUP: ggml_op = 1;
pub const ggml_op_GGML_OP_ADD: ggml_op = 2;
pub const ggml_op_GGML_OP_SUB: ggml_op = 3;
pub const ggml_op_GGML_OP_MUL: ggml_op = 4;
pub const ggml_op_GGML_OP_DIV: ggml_op = 5;
pub const ggml_op_GGML_OP_SQR: ggml_op = 6;
pub const ggml_op_GGML_OP_SQRT: ggml_op = 7;
pub const ggml_op_GGML_OP_SUM: ggml_op = 8;
pub const ggml_op_GGML_OP_MEAN: ggml_op = 9;
pub const ggml_op_GGML_OP_REPEAT: ggml_op = 10;
pub const ggml_op_GGML_OP_ABS: ggml_op = 11;
pub const ggml_op_GGML_OP_SGN: ggml_op = 12;
pub const ggml_op_GGML_OP_NEG: ggml_op = 13;
pub const ggml_op_GGML_OP_STEP: ggml_op = 14;
pub const ggml_op_GGML_OP_RELU: ggml_op = 15;
pub const ggml_op_GGML_OP_GELU: ggml_op = 16;
pub const ggml_op_GGML_OP_SILU: ggml_op = 17;
pub const ggml_op_GGML_OP_NORM: ggml_op = 18;
pub const ggml_op_GGML_OP_RMS_NORM: ggml_op = 19;
pub const ggml_op_GGML_OP_MUL_MAT: ggml_op = 20;
pub const ggml_op_GGML_OP_SCALE: ggml_op = 21;
pub const ggml_op_GGML_OP_CPY: ggml_op = 22;
pub const ggml_op_GGML_OP_CONT: ggml_op = 23;
pub const ggml_op_GGML_OP_RESHAPE: ggml_op = 24;
pub const ggml_op_GGML_OP_VIEW: ggml_op = 25;
pub const ggml_op_GGML_OP_PERMUTE: ggml_op = 26;
pub const ggml_op_GGML_OP_TRANSPOSE: ggml_op = 27;
pub const ggml_op_GGML_OP_GET_ROWS: ggml_op = 28;
pub const ggml_op_GGML_OP_DIAG_MASK_INF: ggml_op = 29;
pub const ggml_op_GGML_OP_SOFT_MAX: ggml_op = 30;
pub const ggml_op_GGML_OP_ROPE: ggml_op = 31;
pub const ggml_op_GGML_OP_CONV_1D_1S: ggml_op = 32;
pub const ggml_op_GGML_OP_CONV_1D_2S: ggml_op = 33;
pub const ggml_op_GGML_OP_FLASH_ATTN: ggml_op = 34;
pub const ggml_op_GGML_OP_FLASH_FF: ggml_op = 35;
pub const ggml_op_GGML_OP_MAP_UNARY: ggml_op = 36;
pub const ggml_op_GGML_OP_MAP_BINARY: ggml_op = 37;
pub const ggml_op_GGML_OP_COUNT: ggml_op = 38;
pub type ggml_op = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_object {
    pub offs: size_t,
    pub size: size_t,
    pub next: *mut ggml_object,
    pub padding: [::std::os::raw::c_char; 8usize],
}
#[test]
fn bindgen_test_layout_ggml_object() {
    assert_eq!(
        ::std::mem::size_of::<ggml_object>(),
        32usize,
        concat!("Size of: ", stringify!(ggml_object))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_object>(),
        8usize,
        concat!("Alignment of ", stringify!(ggml_object))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_object>())).offs as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(offs)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_object>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_object>())).next as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(next)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_object>())).padding as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_object),
            "::",
            stringify!(padding)
        )
    );
}
pub const GGML_OBJECT_SIZE: size_t = 32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_tensor {
    pub type_: ggml_type,
    pub n_dims: ::std::os::raw::c_int,
    pub ne: [i64; 4usize],
    pub nb: [size_t; 4usize],
    pub op: ggml_op,
    pub is_param: bool,
    pub grad: *mut ggml_tensor,
    pub src0: *mut ggml_tensor,
    pub src1: *mut ggml_tensor,
    pub opt: [*mut ggml_tensor; 4usize],
    pub n_tasks: ::std::os::raw::c_int,
    pub perf_runs: ::std::os::raw::c_int,
    pub perf_cycles: i64,
    pub perf_time_us: i64,
    pub data: *mut ::std::os::raw::c_void,
    pub padding: [::std::os::raw::c_char; 8usize],
}
#[test]
fn bindgen_test_layout_ggml_tensor() {
    assert_eq!(
        ::std::mem::size_of::<ggml_tensor>(),
        176usize,
        concat!("Size of: ", stringify!(ggml_tensor))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_tensor>(),
        8usize,
        concat!("Alignment of ", stringify!(ggml_tensor))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).n_dims as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(n_dims)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).ne as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(ne)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).nb as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(nb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).op as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(op)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).is_param as *const _ as usize },
        76usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(is_param)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).grad as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(grad)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).src0 as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(src0)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).src1 as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(src1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).opt as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(opt)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).n_tasks as *const _ as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(n_tasks)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).perf_runs as *const _ as usize },
        140usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(perf_runs)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).perf_cycles as *const _ as usize },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(perf_cycles)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).perf_time_us as *const _ as usize },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(perf_time_us)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).data as *const _ as usize },
        160usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ggml_tensor>())).padding as *const _ as usize },
        168usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_tensor),
            "::",
            stringify!(padding)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ggml_cgraph {
    pub n_nodes: ::std::os::raw::c_int,
    pub n_leafs: ::std::os::raw::c_int,
    pub n_threads: ::std::os::raw::c_int,
    pub work_size: size_t,
    pub work: *mut ggml_tensor,
    pub nodes: [*mut ggml_tensor; 4096usize],
    pub grads: [*mut ggml_tensor; 4096usize],
    pub leafs: [*mut ggml_tensor; 4096usize],
    pub perf_runs: ::std::os::raw::c_int,
    pub perf_cycles: i64,
    pub perf_time_us: i64,
}
